@@ -1,0 +1,9 @@
+require 'cucumber/ast/table'
+require 'cucumber/ast/feature'
+
+module Cucumber
+  # Classes in this module represent the Abstract Syntax Tree
+  # that gets created when feature files are parsed.
+  module Ast
+  end
+end
