@@ -3,6 +3,7 @@
 === New features
 * Added new --backtrace option to show full backtrace (Aslak Hellesøy)   
 * Enable RSpec's diffing automatically if RSpec is loaded (Aslak Hellesøy)
+* Files in support directories are loaded before any other file (i.e. step definitions.)  (#120, Ben Mabey)
 * The Rails features generator got some love and is now tested: http://github.com/aslakhellesoy/cucumber_rails (Aslak Hellesøy)
 * --language is aliased to -l instead of -a (-l became available when --line was refactored) (Aslak Hellesøy)
 * Scenario Outlines which through placeholders in the steps allow control of how scenario table values are used. (#57 Joseph Wilk)
